--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "morui0509@163.com"
+  email            : # "morui0509@163.com"
   researchgate     :  "https://www.researchgate.net/profile/Rui-Mo-3"
   uri              :
   bitbucket        :
